[package]
name = "icao-isa"
version = "0.1.0"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A library for ."
readme = "README.md"
license = "MIT"
edition = "2021"
publish = false

[dependencies]
libm = "0.2"
icao-units = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
